# voices_carry_media

./: .dockerignore  Dockerfile  Dockerfile_prod  db.sqlite3  docker-compose.yaml  main.py  manage.py  pyproject.toml  requirements.txt
core/: urls.py  views.py
core/templates/base/: base.html  footer.html  index.html  navbar.html
core/templates/cotton/base/: navbar_item.html
core/templates/cotton/demos/: audio_player.html
core/templates/demos/: index.html
static/js/: main.js
voices_carry_media/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
