[project]
name = "voices-carry-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-cotton>=2.6.1",
    "django-environ>=0.12.1",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-livereload-server>=0.5.1",
    "gunicorn>=25.1.0",
    "whitenoise>=6.11.0",
]
